[package]
name = "aqueduct"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.0", features = [
    "time",
    "rt",
    "macros",
    "fs",
    "sync",
    "rt-multi-thread",
    "tracing",
] }
tracing = "0.1.37"
lazy_id = "0.1.0"
tracing-subscriber = { version = "0.3.16", features = ["fmt"] }

[dev-dependencies]
once_cell = "1.16.0"
